--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 				</ul>
 				
 				<div class="navbar-buttons mbr-section-btn">
-					<a class="btn btn-primary display-4" href="https://mobiri.se">Custom Order Now</a>
+					<a class="btn btn-primary display-4" href="">Custom Order Now</a>
 				</div>
 			</div>
 		</div>
